# 2d-game-physiscs

./: .gitignore  CMakeLists.txt  CMakePresets.json  Main.cpp  Makefile  Vec2.cpp  Vec2.hpp  package-lock.json  package.json  vcpkg-configuration.json  vcpkg.json
include/: config.h  graphic.h  vec2.h  vec3.h
src/: Application.cpp  Application.hpp  Graphics.cpp  Graphics.hpp  Main.cpp  graphic.c  index.ts  main.c  vec2.c  vec3.c
src copy/: index.ts
src copy/basic-operations/: index.ts  interface-operations.ts  vec2-operations.ts
src copy/cpp/: Graphics.cpp  Readme.md  app
src copy/cpp/Physics/: Constants.h  Force.cpp  Force.h  Particle.cpp
src/Physics/: Constants.hpp  Force.cpp  Force.hpp  Particle.cpp  Particle.hpp  Vec2.cpp  Vec2.hpp
src/basic-operations/: index.ts  interface-operations.ts  vec2-operations.ts  vec2.ts  vec3-operations.ts
src/cpp/: Application.cpp  Application.h  Graphics.cpp  Main.cpp  Makefile  Vec2.cpp  app
src/cpp/Physics/: Constants.h  Contants.h  Force.cpp  Force.h  Particle.cpp  Particle.h  Vec2.cpp  Vec2.h
